--- a/core/src/main/res/layout/activity_store.xml
+++ b/core/src/main/res/layout/activity_store.xml
@@ -5,12 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HorizonActivity">
-
-    <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:clickable="true"/>
+        tools:context=".activities.StoreActivity">
 
 </android.support.constraint.ConstraintLayout>
