--- a/app/src/main/res/layout/activity_ad.xml
+++ b/app/src/main/res/layout/activity_ad.xml
@@ -5,12 +5,16 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.StoreActivity"
-        tools:layout_editor_absoluteY="25dp">
+        tools:context="com.horizon.app.horizonapp.ADActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+    <com.bigkoo.convenientbanner.ConvenientBanner
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/convenientBanner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:canLoop="false">
+    </com.bigkoo.convenientbanner.ConvenientBanner>
+
+    <!--app:canLoop:控制是否循环-->
 
 </android.support.constraint.ConstraintLayout>
