--- a/app/src/main/res/layout/activity_adt.xml
+++ b/app/src/main/res/layout/activity_adt.xml
@@ -5,12 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.StoreActivity"
-        tools:layout_editor_absoluteY="25dp">
+        tools:context=".ADTActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+    <ImageView android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/launcher_00"
+    />
 
 </android.support.constraint.ConstraintLayout>
