--- a/app/src/main/res/layout/activity_ad.xml
+++ b/app/src/main/res/layout/activity_ad.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.horizon.app.horizonapp.ADActivity">
+        tools:context="com.horizon.app.horizonapp.RollAdActivity">
 
     <com.bigkoo.convenientbanner.ConvenientBanner
             xmlns:app="http://schemas.android.com/apk/res-auto"
