--- a/app/src/main/res/layout/activity_adt.xml
+++ b/app/src/main/res/layout/activity_adt.xml
@@ -7,9 +7,13 @@
         android:layout_height="match_parent"
         tools:context=".TimeAdActivity">
 
-    <ImageView android:layout_width="wrap_content"
+    <ImageView android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:src="@drawable/launcher_00"
-    />
+               android:src="@drawable/pokemon"
+               android:id="@+id/imageView"
+               app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               android:contentDescription="TimeAd"/>
 
 </android.support.constraint.ConstraintLayout>
